--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "url": "https://github.com/Deluze"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@vitejs/plugin-vue": "^2.2.4",
     "@vue/cli": "^5.0.1",
     "chalk": "^4.1.2",
