--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@vuesence/cloud-sync-button": "^0.9.3",
+    "chart.js": "^3.9.1",
     "download": "^8.0.0",
     "downloadjs": "^1.4.7",
     "electron-dl": "^3.3.1",
@@ -37,6 +38,7 @@
     "request": "^2.88.2",
     "request-progress": "^3.0.0",
     "vue": "^3.2.36",
+    "vue-chartjs": "^4.1.1",
     "vue3-circle-progress": "^1.0.7"
   }
 }
